superset/config/superset-virtualservice-azure.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: superset
  namespace: superset ## Virtualservice will be deployed in the same namespace as superset
spec:
  hosts:
  - "superset.infologistix-cnc.ddnss.org" ## domain name of superset app
  gateways:
  - istio-system/istio-ingress-gateway ## Name of istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: superset.superset.svc.cluster.local ## url of service of superset
        port:
          number: 8088
